keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          volumeMounts:
            - name: task-pv-storage
              mountPath: "/opt/keycloak/demo/certs"
          command:
            - "/opt/keycloak/bin/kc.sh"
          args:
            - "start-dev"
            - "--verbose"
            - "--db=postgres"
            - "--db-url=jdbc:postgresql://$(POSTGRES_HOST):$(KC_DB_URL_PORT)/$(POSTGRES_DB)"
            - "--db-username=$(POSTGRES_USER)"
            - "--db-password=$(POSTGRES_PASSWORD)"
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: task-pv-claim
