keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: https
    - protocol: TCP
      port: 8090
      targetPort: 8080
      name: http
  type: LoadBalancer
