ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: keycloak-ingress
#   namespace: keycloak
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure
#     traefik.ingress.kubernetes.io/router.tls: "true"
# spec:
#   ingressClassName: traefik
#   rules:
#   - host: iam.fits.cnrs.fr 
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: keycloak-service
#             port:
#               number: 8443
#   tls:
#     - hosts:
#         - iam.fits.cnrs.fr
#       secretName: keycloak-tls-secret

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    traefik.ingress.kubernetes.io/backend-protocol: "https"
    traefik.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - iam.fits.cnrs.fr
      secretName: keycloak-tls-secret
  rules:
  - host: iam.fits.cnrs.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak-service
            port:
              number: 8443
